--- a/haskell-auto-importer.cabal
+++ b/haskell-auto-importer.cabal
@@ -18,14 +18,17 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:
-    HaskellAutoImporter.Util
-  build-depends:       base >=4.11 && <4.12
+  exposed-modules:     HaskellAutoImporter.Util
+  default-extensions:  OverloadedStrings
+  build-depends:       base >=4.11 && <4.12,
+                       containers,
+                       text
   default-language:    Haskell2010
 
 executable haskell-auto-importer
   main-is:             Main.hs
-  build-depends:       base >=4.11 && <4.12
+  build-depends:       base >=4.11 && <4.12,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   
