--- a/haskell-auto-importer.cabal
+++ b/haskell-auto-importer.cabal
@@ -19,16 +19,25 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     HaskellAutoImporter.Util
+                       HaskellAutoImporter.AutoImporter
   default-extensions:  OverloadedStrings
   build-depends:       base >=4.11 && <4.12,
                        containers,
-                       text
+                       text,
+                       haskell-src-exts,
+                       syb,
+                       mtl
   default-language:    Haskell2010
 
 executable haskell-auto-importer
   main-is:             Main.hs
   build-depends:       base >=4.11 && <4.12,
-                       containers
+                       containers,
+                       text,
+                       haskell-src-exts,
+                       syb,
+                       mtl
+  default-extensions:  OverloadedStrings
   hs-source-dirs:      src
   default-language:    Haskell2010
   
