--- a/himport.cabal
+++ b/himport.cabal
@@ -27,7 +27,8 @@ library
                        text,
                        haskell-src-exts,
                        syb,
-                       mtl
+                       mtl,
+                       show-prettyprint
   default-language:    Haskell2010
 
 executable himport
@@ -37,7 +38,8 @@ executable himport
                        text,
                        haskell-src-exts,
                        syb,
-                       mtl
+                       mtl,
+                       show-prettyprint
   default-extensions:  OverloadedStrings
   hs-source-dirs:      src
   default-language:    Haskell2010
