--- a/himport.cabal
+++ b/himport.cabal
@@ -53,7 +53,9 @@ test-suite spec
   build-depends:      base,
                       himport,
                       hspec,
-                      haskell-src-exts
+                      haskell-src-exts,
+                      show-prettyprint,
+                      deepseq
   other-modules:      HImport.AutoImporterSpec
                       HImport.UtilSpec
   default-language:   Haskell2010
